<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorYellow"
              android:orientation="vertical"
              android:padding="5dp">

    <TextView
        android:id="@+id/title"
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@color/category_report"
        android:text="@string/payment"
        android:textSize="@dimen/font_large"
        android:textStyle="bold"
        android:typeface="sans"
        android:visibility="visible"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:color="@color/colors"
        android:padding="10dp"
        android:text="@string/yes"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/order"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:color="@color/colors"
        android:padding="10dp"
        android:text="@string/statement"
        android:textSize="16sp"
        android:textStyle="bold"/>
</LinearLayout>